--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -1,10 +1,19 @@
 {
+  "compileOnSave": false,
   "compilerOptions": {
     "outDir": "../dist/",
     "sourceMap": true,
-    "noImplicitAny": true,
-    "module": "commonjs",
+    "declaration": false,
+    "moduleResolution": "node",
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
     "target": "es5",
-    "allowJs": true
+    "typeRoots": [
+      "node_modules/@types"
+    ],
+    "lib": [
+      "es2017",
+      "dom"
+    ]
   }
 }
