--- a/src/package.json
+++ b/src/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "@types/express": "^4.11.0",
+    "@types/mysql": "^2.15.2",
     "bootstrap": "^4.0.0-beta.2",
     "core-js": "^2.4.1",
     "express": "^4.16.2",
